# 3DMinRegLineIntersect

./: CMakeLists.txt  LICENSE  README.md
examples/: run1L1Q1P.cpp  run2M.cpp  run3L1Q.cpp  run3Q.cpp  run6L.cpp
include/: genData.hpp  solverLines.hpp  solverPoints.hpp  solvers.hpp  solversPoints.hpp  utils.hpp
src/: solverLines.cpp  solverPoints.cpp  solvers.cpp  utils.cpp
